--- a/css/plan.css
+++ b/css/plan.css
@@ -72,7 +72,7 @@ nav.secondary li { display:block; }
 
 main { position:relative;  }
 section { text-align:center; }
-section article { display:inline-block; text-align:left; vertical-align:top; }
+section article { display:block; text-align:left; vertical-align:top; }
 section article header { text-align:center; }
 section article header img { vertical-align:top; }
 section article h4 { text-indent:35px; text-align:left; position:relative; }
@@ -152,8 +152,8 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     article, section > header > p { max-width:400px; }
-    article { margin-left:36px; margin-right:36px;  }
-    #explore article { max-width:380px; margin-left:50px; margin-right:50px; }
+    article { margin-left:auto; margin-right:auto;  }
+    #explore article { padding-left:30px; }
     footer span:not(:last-of-type) { margin-right:20px; }
     footer span:not(:last-of-type):after { left:10px; }
     /* Animation */
@@ -201,8 +201,8 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     nav.mobile { display:none; }
     /* Size */
     body > header, main > section:not(.map) { width:92%; margin-left:4vw; margin-right:4vw; }
-    section > article { width:calc(33.33% - 20px); margin-bottom:40px; }
-    section > article, section#explore article { margin-left:0px; margin-right:0px; }
+    section > article { display:inline-block; width:calc(33.33% - 20px); margin-bottom:40px; margin-left:0px; margin-right:0px; }
+    #explore article { padding-left:0px; }
     section > article:not(:nth-of-type(3n)) { margin-right:30px; }
     section#explore article h4 { text-align:left; }
     section > header > p { max-width:620px; }
