--- a/css/plan.css
+++ b/css/plan.css
@@ -32,7 +32,7 @@ hr { border:none; height:1px; margin:0 auto; padding:0; }
 .nobreak { white-space:nowrap; }
 footer p { margin:0; padding:0; }
 .jumpToPoint { visibility:hidden; position:absolute; top:-25px; left:0px; }
-.disabled { pointer-events:none; }
+.disabled iframe { pointer-events:none; }
 
 
 /* Typography */
@@ -53,6 +53,7 @@ nav.mobile .view { display:none; }
 nav.mobile label:first-of-type { border-right:1px solid #1B468D; }
 nav.mobile .view:checked + label { background:#1B468D; color:white; }
 nav.mobile .view:not(:checked) + label { color:#1B468D; background:white; }
+section.map:after { background:black; }
 footer { background:#F1F1F1; -webkit-box-shadow: 0px 4px 30px black; -moz-box-shadow: 0px 4px 30px black; box-shadow: 0px 4px 30px black; }
 hr { background-color:#1B468D; }
 hr.subsection-divider, section.list > hr, section.list > section hr.mobileOnly { background-color:#CBCBCB; }
@@ -67,6 +68,8 @@ nav.mobile label { display:inline-block; text-align:center; line-height:30px; }
 
 section { position:relative; }
 section.map { position:relative; }
+section.map:after { position:absolute; left:0; top:46px; z-index:-1; }
+section.map.disabled:after { z-index:1; }
 section.map iframe { z-index:0; position:relative; }
 nav.secondary ul { text-align:center; }
 nav.secondary li { display:block; }
@@ -101,6 +104,8 @@ body > header nav.primary ul li img { height:50px; }
 nav.mobile { width:150px; height:30px; margin:20px auto 30px auto; }
 nav.mobile label { border:none; height:100%; width:50%; }
 
+section.map:after { display:block; width:100%; }
+section.map.disabled:after { height:calc(100vh - 70px - 46px); }
 section.map > iframe { width:100%; height:calc(100vh - 70px); }
 
 nav.secondary > ul { margin-bottom:70px; }
@@ -137,6 +142,8 @@ nav a:hover { border-bottom:1px solid #1B468D; }
 li.homepage a:hover { border-bottom:0; }
 nav.mobile label:hover { cursor:pointer; }
 footer .content span:not(:last-of-type):after { content:"·"; }
+
+section.map:after { transition: height 1s ease, z-index 5s ease; content:""; opacity:.1; height:0px; }
 
 .airports .mapTitleStarter:before { content:url("../pins/airport.svg"); }
 .buses .mapTitleStarter:before { content:url("../pins/bus.svg"); }
@@ -211,6 +218,7 @@ footer .content span:not(:last-of-type):after { content:"·"; }
     section > header > p { max-width:620px; }
     section > hr.subsection-divider { display:inline-block; margin:40px calc(16.67% - 90px); }
     section > article header img { width:100%; max-width:342px; }
+    section.map.disabled:after { height:calc(50vh - 46px); }
     section.map > iframe { width:100%; height:50vh; }
     section.map { margin-bottom:30px; }
     /* Animation */
