--- a/css/plan.css
+++ b/css/plan.css
@@ -109,7 +109,7 @@ section.map.disabled:after { height:calc(100vh - 70px - 46px); }
 section.map > iframe { width:100%; height:calc(100vh - 70px); }
 
 nav.secondary > ul { margin-bottom:70px; }
-nav.secondary li { margin:0 20px; line-height:40px; }
+nav.secondary li { line-height:40px; }
 nav.secondary li ul li:first-child { margin-left:0px; }
 nav.secondary li ul li:last-child { margin-right:0px; }
 
@@ -119,7 +119,7 @@ section > header hr { margin-bottom:50px; }
 section > header img.titleImage { width:100px; margin-bottom:15px; }
 section > header > p { margin:0 auto; padding-bottom:40px; }
 
-section > article { width:100%; margin-bottom:60px; }
+section > article { width:100%; margin-bottom:40px; }
 section#explore > article { margin-bottom:0px; }
 .hotel:not(.venue) .mapTitleStarter:before, #thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before, #wheretoeat .mapTitleStarter:before { width:16px; }
 section > article header { margin:0; }
@@ -156,7 +156,9 @@ section.map:after { transition: height 1s ease, z-index 5s ease; content:""; opa
     /* Reset */
     /* Typography */
     /* Position */
-    nav.secondary li { display:inline-block; }
+    nav.secondary li { display:inline-block; margin:0 20px; }
+    nav > ul li:first-child { margin-left:0px; }
+    nav > ul li:last-child { margin-right:0px; }
     /* Size */
     main > section:not(.map), body > footer .content { margin-left:auto; margin-right:auto; }
     article, section > header > p { max-width:400px; }
