--- a/css/plan.css
+++ b/css/plan.css
@@ -66,7 +66,7 @@ header nav.primary ul li.plan a { padding-bottom:6px; }
 nav.mobile { margin:0 auto; }
 nav.mobile label { display:inline-block; text-align:center; line-height:30px; }
 
-section { position:relative; }
+section { position:relative; text-align:center; }
 section.map { position:relative; }
 section.map:after { position:absolute; left:0; top:46px; z-index:-1; }
 section.map.disabled:after { z-index:1; }
@@ -75,7 +75,6 @@ nav.secondary ul { text-align:center; }
 nav.secondary li { display:block; }
 
 main { position:relative;  }
-section { text-align:center; }
 section article { display:block; text-align:left; vertical-align:top; }
 section article header { text-align:center; }
 section article header img { vertical-align:top; }
@@ -96,7 +95,7 @@ h2 { margin-bottom:20px; }
 hr { width:170px; }
 body > header { padding-top:20px; padding-bottom:20px; }
 body > header, main > section:not(.map) { width:86.67%; margin-left:6.67%; margin-right:6.67%; }
-body > footer { height:200px; padding-left:6.67%; padding-right:6.67%; }
+body > footer { height:182px; padding-left:6.67%; padding-right:6.67%; }
 body > footer p.typ-body { margin-bottom:0px; }
 body > header nav.primary, main > section:not(.map) { margin-top:0px; margin-bottom:0px; }
 body > header nav.primary ul li img { height:50px; }
@@ -113,7 +112,8 @@ nav.secondary li { line-height:40px; }
 nav.secondary li ul li:first-child { margin-left:0px; }
 nav.secondary li ul li:last-child { margin-right:0px; }
 
-section.list > section { margin-bottom:40px; margin: 0 auto; }
+section.list > section { margin:0 auto; }
+section.list > section:not(:last-of-type) { margin-bottom:40px; }
 section.list > hr.mobileOnly { margin-bottom:70px; }
 section > header hr { margin-bottom:50px; }
 section > header img.titleImage { width:100px; margin-bottom:15px; }
@@ -211,9 +211,8 @@ section.map:after { transition: height 1s ease, z-index 5s ease; content:""; opa
     nav.mobile { display:none; }
     /* Size */
     body > header, main > section:not(.map) { width:92%; margin-left:4vw; margin-right:4vw; }
-    section { margin-bottom:70px; }
     section > article { display:inline-block; width:calc(33.33% - 20px); margin-bottom:0px; margin-left:0px; margin-right:0px; }
-    section.list > section { margin-bottom:70px; }
+    section.list > section:not(:last-of-type) { margin-bottom:70px; }
     section#explore article { padding-left:0px; }
     section > article:not(:nth-of-type(3n)) { margin-right:30px; }
     section#explore article h4 { text-align:left; }
@@ -232,7 +231,7 @@ section.map:after { transition: height 1s ease, z-index 5s ease; content:""; opa
     /* Size */
     .typ-title { font-size:36px; line-height:50px; letter-spacing:2px; }
     section > header img.titleImage { margin-bottom:40px; }
-    section.list > section { margin-bottom:90px; }
+    section.list > section:not(:last-of-type) { margin-bottom:90px; }
     /* Animation */
 }
 @media (min-width:1600px) {
