--- a/css/plan.css
+++ b/css/plan.css
@@ -18,7 +18,7 @@
 }
 
 /* Reset */
-* { box-sizing:border-box; }
+* { box-sizing:border-box; z-index:1; }
 html, body, header, main, section, article, footer { margin:0; padding:0; width:100%; }
 h1, h2, h3, h4, h5, h6 { margin-top:0px; margin-bottom:0px; }
 a { text-decoration:none; }
